- Aligned bulk buttons with table on claimed and possible listing pages. - Updated filter text on possible pubs listing screen. - Removed experimental message. - Style and layout tweaks to UPO staff listing. - Relates to issue #672919.

--- a/templates/en/css/dynamic_css.tpl.css
+++ b/templates/en/css/dynamic_css.tpl.css
@@ -2197,3 +2197,15 @@ a.author_id_link:hover {
 .claimed-correction-required { background: #fffeeb; }
 .possible-my-pub { background: #d6ffe0; }
 .possible-hide { background: #eaeaea; }
+
+.upo-staff td {
+    padding: 2px 20px 2px 4px;
+}
+
+.upo-staff-odd {
+    background-color: #f3f3f3;
+}
+
+.upo-staff-active {
+    background: #ffffe5;
+}
